# git-mover

./: Cargo.toml  README.md
.github/workflows/: typos.yml
src/: cli.rs  config.rs  errors.rs  lib.rs  macros.rs  main.rs  platform.rs  sync.rs  utils.rs
src/codeberg/: config.rs  mod.rs  platform.rs  repo.rs
src/github/: config.rs  mod.rs  platform.rs  repo.rs
src/gitlab/: config.rs  mod.rs  platform.rs  repo.rs
