[package]
name = "git-mover"
version = "1.0.1"
edition = "2021"
keywords = ["utility", "git", "cli"]
categories = ["command-line-utilities"]
description = "Move git repositories to a new location"
documentation = "https://docs.rs/git-mover"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Its-Just-Nans/git-mover"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
git2 = "0.19.0"
home = "0.5.11"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
url = "2.5.4"
