[package]
name = "git-mover"
version = "1.1.1"
edition = "2021"
keywords = ["utility", "git", "cli"]
categories = ["command-line-utilities"]
description = "Move git repositories to a new location"
documentation = "https://docs.rs/git-mover"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/Its-Just-Nans/git-mover"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
git2 = "0.20"
home = "0.5"
indicatif = "0.18.0"
log = "0.4"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rpassword = "7.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
url = "2.5.4"
urlencoding = "2.1.3"
